--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -20,8 +20,8 @@
                                     <li><a href="/blog/:id">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog">Blog</a></li>
-                            <li><a href="./contact">Contact</a></li>
+                            <li><a href="/blog">Blog</a></li>
+                            <li><a href="/contact">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
