--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -1,9 +1,6 @@
-<script src="/js/jquery-3.3.1.min.js"></script>
-<!-- https://jquery.com/download/ -->
-<script src="/jquery-ui-datepicker/jquery-ui.min.js"></script>
-<!-- https://jqueryui.com/download/ -->
-<script src="/js/bootstrap.min.js"></script>
-<!-- https://getbootstrap.com/ -->
+<script>
+  $(document).ready(function() { $("deleteModal").modal("show"); });
+</script>
 <div class="container mt-5">
   <div class="row tm-content-row">
     <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 tm-block-col">
@@ -29,15 +26,15 @@
                   <td>{{this.quantity}}</td>
                   <td>{{this.availability}}</td>
                   <td>
-                    <a
-                      href="#myModal"
+                    <button
+                      href=""
                       class="tm-product-delete-link"
                       data-id="{{this._id}}"
-                      data-bs-toggle="modal"
-                      data-bs-target="#myModal"
+                      data-toggle="modal"
+                      data-target="#deleteModal"
                     >
                       <i class="far fa-trash-alt tm-product-delete-icon"></i>
-                    </a>
+                    </button>
                   </td>
                 </tr>
               {{/each}}
@@ -52,13 +49,6 @@
         >
           Add new product
         </a>
-        <button
-          class="btn btn-primary btn-block text-uppercase"
-          data-bs-toggle="modal"
-          data-bs-target="#deleteModal"
-        >
-          Delete selected products
-        </button>
       </div>
     </div>
     <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-block-col">
@@ -93,36 +83,60 @@
     </div>
   </div>
 </div>
-<!-- Alert -->
 
-<!-- Modal HTML -->
-<div id="myModal" class="modal fade">
-  <div class="modal-dialog modal-confirm">
+<!-- Delete Modal -->
+<div
+  class="modal fade"
+  id="deleteModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="deleteModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header flex-column">
-        <div class="icon-box">
-          <i class="material-icons">&#xE5CD;</i>
-        </div>
-        <h4 class="modal-title w-100">Are you sure?</h4>
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Delete warming</h5>
         <button
           type="button"
           class="close"
           data-dismiss="modal"
-          aria-hidden="true"
-        >&times;</button>
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
       <div class="modal-body">
-        <p>Do you really want to delete these records? This process cannot be
-          undone.</p>
+        Do you really want to delete this product?
       </div>
-      <div class="modal-footer justify-content-center">
+      <div class="modal-footer">
         <button
           type="button"
           class="btn btn-secondary"
           data-dismiss="modal"
-        >Cancel</button>
-        <button type="button" class="btn btn-danger">Delete</button>
+        >Close</button>
+        <button id ="deleteProduct" type="button" class="btn btn-primary">Delete</button>
       </div>
     </div>
   </div>
 </div>
+{{!-- Hidden delete form --}}
+<form name="deleteForm" method="POST" ></form>
+
+<script>
+
+  document.addEventListener('DOMContentLoaded', function() {
+    var productId;
+    var deleteProduct = document.getElementById('deleteProduct');
+    var deleteForm = document.forms['deleteForm']
+    $('#deleteModal').on('show.bs.modal', function (event) { 
+      var button = $(event.relatedTarget); 
+      productId = button.data('id'); 
+      }); 
+    deleteProduct.onclick = function() {
+      deleteForm.action = '/admin/products/'+productId+'?_method=DELETE';
+      deleteForm.submit();
+    }
+  });
+
+</script>
